Start working on making data playback code cleaner

--- a/module/support/logging/DataPlayback/CMakeLists.txt
+++ b/module/support/logging/DataPlayback/CMakeLists.txt
@@ -1,12 +1,11 @@
 # Generate our data logging module to handle all the message types
 find_package(PythonInterp 3 REQUIRED)
 
-set(source_file "${CMAKE_CURRENT_BINARY_DIR}/src/DataPlayback.cpp")
+set(source_file "${CMAKE_CURRENT_BINARY_DIR}/src/register_players.cpp")
 set(config_file "${CMAKE_CURRENT_BINARY_DIR}/data/config/DataPlayback.yaml")
 
 # Copy across the files
 add_custom_command(
-  USES_TERMINAL
   OUTPUT "${source_file}" "${config_file}"
   COMMAND ${PYTHON_EXECUTABLE} ARGS "${CMAKE_CURRENT_SOURCE_DIR}/src/generate_dataplayback.py"
           "${PROJECT_BINARY_DIR}/shared" "${source_file}" "${config_file}"
