Enhance data playback so it can handle multiple files

--- a/module/support/logging/DataPlayback/CMakeLists.txt
+++ b/module/support/logging/DataPlayback/CMakeLists.txt
@@ -6,9 +6,9 @@ set(config_file "${CMAKE_CURRENT_BINARY_DIR}/data/config/DataPlayback.yaml")
 
 # Copy across the files
 add_custom_command(
-  OUTPUT "${source_file}" "${config_file}"
+  OUTPUT "${source_file}"
   COMMAND ${PYTHON_EXECUTABLE} ARGS "${CMAKE_CURRENT_SOURCE_DIR}/src/generate_dataplayback.py"
-          "${PROJECT_BINARY_DIR}/shared" "${source_file}" "${config_file}"
+          "${PROJECT_BINARY_DIR}/shared" "${source_file}"
   DEPENDS ${NUCLEAR_MESSAGE_LIBRARIES} "${CMAKE_CURRENT_SOURCE_DIR}/src/generate_dataplayback.py"
   COMMENT "Generating DataPlayback system for current messages"
 )
