--- a/module/input/Camera/data/config/nugus3/Cameras/Right.yaml
+++ b/module/input/Camera/data/config/nugus3/Cameras/Right.yaml
@@ -15,14 +15,16 @@ lens:
   # Lens projection type
   projection: EQUIDISTANT
   # Normalised focal length: focal length in pixels / image width
-  focal_length: 0.322265625
+  focal_length: 0.34668243830134987
   # Normalised image centre offset: pixels from centre to optical axis / image width
-  centre: [0, 0]
-  # The angular diameter that the lens covers (the area that light hits on the sensor)
+  centre: [0.02070395328006253, 0.0010238129312947657]
+  # The polynomial distortion coefficients for the lens
+  k: [0.46102867909441303, 0.1464565980831643]
+  # The angular diameter that the lens covers (the area that light hits on the sensor) or auto for the entire sensor
   fov: 180 * pi / 180
   # The homogenous transform from the rigid platform this camera is attached to to its optical location
   Hpc:
-    - [1, 0, 0, 0]
-    - [0, 1, 0, -0.068]
-    - [0, 0, 1, 0]
-    - [0, 0, 0, 1]
+    - [0.9997403694613228, -0.016551656784825577, -0.01566002262642871, 0.08893612063588988]
+    - [0.01728764296000275, 0.9986932814319833, 0.04809227613146373, -0.03529909622045881]
+    - [0.014843552535558163, -0.04835051478781678, 0.9987201292902445, 0.0713674563254241]
+    - [0.0, 0.0, 0.0, 1.0]
