--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -14,7 +14,10 @@ steps:
           config: .buildkite/docker-compose.yml
           push:
             - generic:nubots/nubots:generic
-  
+          env:
+            - COMPOSE_DOCKER_CLI_BUILD=1
+            - DOCKER_BUILDKIT=1
+
   - label: "Push nuc7i7bnh :docker: image"
     branches: master
     agents:
@@ -27,7 +30,10 @@ steps:
           config: .buildkite/docker-compose.yml
           push:
             - nuc7i7bnh:nubots/nubots:nuc7i7bnh
-            
+          env:
+            - COMPOSE_DOCKER_CLI_BUILD=1
+            - DOCKER_BUILDKIT=1
+
   - label: "Push nuc8i7beh :docker: image"
     branches: master
     agents:
@@ -40,6 +46,9 @@ steps:
           config: .buildkite/docker-compose.yml
           push:
             - nuc8i7beh:nubots/nubots:nuc8i7beh
+          env:
+            - COMPOSE_DOCKER_CLI_BUILD=1
+            - DOCKER_BUILDKIT=1
 
   # Wait to finish uploading the image before doing the next steps
   - wait
@@ -53,6 +62,9 @@ steps:
           pull: generic_image
           run: generic
           workdir: /home/nubots/NUbots/
+          env:
+            - COMPOSE_DOCKER_CLI_BUILD=1
+            - DOCKER_BUILDKIT=1
 
   # Build for both nuc targets
   - label: "Build nuc7i7bnh"
@@ -63,6 +75,9 @@ steps:
           pull: nuc7i7bnh_image
           run: nuc7i7bnh
           workdir: /home/nubots/NUbots/
+          env:
+            - COMPOSE_DOCKER_CLI_BUILD=1
+            - DOCKER_BUILDKIT=1
   - label: "Build nuc8i7beh"
     command: echo "nuc8i7beh image successfully built!"
     plugins:
@@ -71,6 +86,9 @@ steps:
           pull: nuc8i7beh_image
           run: nuc8i7beh
           workdir: /home/nubots/NUbots/
+          env:
+            - COMPOSE_DOCKER_CLI_BUILD=1
+            - DOCKER_BUILDKIT=1
 
   # Formatting
   - label: "Validate C++ and Protobuf formatting"
@@ -81,6 +99,9 @@ steps:
           pull: generic_image
           run: generic
           workdir: /home/nubots/NUbots/
+          env:
+            - COMPOSE_DOCKER_CLI_BUILD=1
+            - DOCKER_BUILDKIT=1
   - label: "Validate CMake formatting"
     command: ".buildkite/scripts/validate_cmake_format.sh"
     plugins:
@@ -89,6 +110,9 @@ steps:
           pull: generic_image
           run: generic
           workdir: /home/nubots/NUbots/
+          env:
+            - COMPOSE_DOCKER_CLI_BUILD=1
+            - DOCKER_BUILDKIT=1
   - label: "Validate Python formatting"
     command: ".buildkite/scripts/validate_python_format.sh"
     plugins:
@@ -97,3 +121,6 @@ steps:
           pull: generic_image
           run: generic
           workdir: /home/nubots/NUbots/
+          env:
+            - COMPOSE_DOCKER_CLI_BUILD=1
+            - DOCKER_BUILDKIT=1
