Add cache-from arguments

--- a/.buildkite/docker-compose.yml
+++ b/.buildkite/docker-compose.yml
@@ -5,6 +5,11 @@ services:
   generic:
     build:
       context: ./../docker
+      # Use these two images as a cache when building this image
+      # Assumingly, order is important here as well
+      cache_from:
+        - generic
+        - generic_image
       args:
         platform: generic
         BUILDKIT_INLINE_CACHE: 1
@@ -20,6 +25,11 @@ services:
   nuc7i7bnh:
     build:
       context: ./../docker
+      # Use these two images as a cache when building this image
+      # Assumingly, order is important here as well
+      cache_from:
+        - nuc7i7bnh
+        - nuc7i7bnh_image
       args:
         platform: nuc7i7bnh
         BUILDKIT_INLINE_CACHE: 1
@@ -35,6 +45,11 @@ services:
   nuc8i7beh:
     build:
       context: ./../docker
+      # Use these two images as a cache when building this image
+      # Assumingly, order is important here as well
+      cache_from:
+        - nuc8i7beh
+        - nuc8i7beh_image
       args:
         platform: nuc8i7beh
         BUILDKIT_INLINE_CACHE: 1
