--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -5,7 +5,7 @@
   "workspaceMount": "type=bind,consistency=delegated,src=${localWorkspaceFolder},dst=/home/nubots/NUbots",
   "workspaceFolder": "/home/nubots/NUbots",
   "mounts": [
-    "type=volume,src=horus_generic_build,dst=/home/fourtel/build,consistency=delegated"
+    "type=volume,src=nubots_generic_build,dst=/home/nubots/build,consistency=delegated"
   ],
   "extensions": [
     "ms-vscode.cpptools",
