--- a/module/support/NUsight/data/config/NUsight.yaml
+++ b/module/support/NUsight/data/config/NUsight.yaml
@@ -12,7 +12,7 @@ reaction_handles:
   # Overview information for the dashboard, designed for minimum bandwidth
   overview: true
   # Motor positions, orientation, etc.
-  sensor_data: true
+  sensor_data: false
   # Raw image
   image: false
   # compressed image
