--- a/module/input/ImageDecompressor/CMakeLists.txt
+++ b/module/input/ImageDecompressor/CMakeLists.txt
@@ -1,4 +1,4 @@
 find_package(TurboJPEG REQUIRED)
 
 # Build our NUClear module
-nuclear_module(INCLUDES ${TurboJPEG_INCLUDE_DIRS} LIBRARIES ${TurboJPEG_LIBRARIES})
+nuclear_module(LIBRARIES TurboJPEG::TurboJPEG)
